--- a/app/globals.css
+++ b/app/globals.css
@@ -3,19 +3,22 @@
 @tailwind utilities;
 
 @layer base{
+  html{
+    scroll-behavior: smooth !important;
+  }
   body{
-    @apply scroll-smooth bg-slate-50 dark:bg-slate-900 dark:text-white
+    @apply bg-slate-50 dark:bg-slate-900 dark:text-white
   }
 
   h1{
-    @apply text-4xl sm:text-5xl lg:text-6xl
+    @apply text-3xl sm:text-4xl md:text-5xl lg:text-6xl
   }
 
   h2{
-    @apply text-3xl sm:text-4xl lg:text-5xl
+    @apply text-2xl sm:text-3xl md:text-4xl lg:text-5xl
   }
 
   h3{
-    @apply text-2xl sm:text-3xl lg:text-4xl
+    @apply text-xl sm:text-2xl md:text-3xl lg:text-4xl
   }
 }
