--- a/app/globals.css
+++ b/app/globals.css
@@ -21,4 +21,8 @@
   h3{
     @apply text-xl sm:text-2xl md:text-3xl lg:text-4xl
   }
+
+  h4{
+    @apply text-base sm:text-xl md:text-2xl lg:text-3xl
+  }
 }
