--- a/app/globals.css
+++ b/app/globals.css
@@ -29,4 +29,8 @@
   input{
     @apply outline-none rounded-md p-1 md:p-2 border-2 border-gray-300
   }
+
+  textarea{
+    @apply outline-none rounded-md p-1 md:p-2 border-2 border-gray-300
+  }
 }
