--- a/app/globals.css
+++ b/app/globals.css
@@ -27,10 +27,10 @@
   }
 
   input{
-    @apply outline-none rounded-md p-1 md:p-2 border-2 border-gray-300
+    @apply outline-none rounded-md p-1 md:p-2 border-2 border-gray-300 dark:text-black
   }
 
   textarea{
-    @apply outline-none rounded-md p-1 md:p-2 border-2 border-gray-300
+    @apply outline-none rounded-md p-1 md:p-2 border-2 border-gray-300 dark:text-black
   }
 }
