--- a/app/globals.css
+++ b/app/globals.css
@@ -23,7 +23,7 @@
   }
 
   h4{
-    @apply text-base sm:text-xl md:text-2xl lg:text-3xl
+    @apply text-base sm:text-xl md:text-2xl
   }
 
   input{
